deploy/k8s-prod/ingress-service-traefic-v2.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-pfa
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: pfa-stripprefix
    services:
    - name: pfa-frontend-service
      port: 80
  - match: PathPrefix(`/api/account`)
    kind: Rule
    middlewares:
    - name: pfa-stripprefix
    services:
    - name: pfa-account-service
      port: 8080
  - match: PathPrefix(`/api/common`)
    kind: Rule
    middlewares:
    - name: pfa-stripprefix
    services:
    - name: pfa-common-service
      port: 8080
  - match: PathPrefix(`/api/stock`)
    kind: Rule
    middlewares:
    - name: pfa-stripprefix
    services:
    - name: pfa-stock-service
      port: 8080
    
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pfa-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api/account
      - /api/stock
      - /api/common

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dashboard.srv`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      scheme: https
      port: 443
